src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else-using-impl.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex1-return-one-existing-name-if-else-using-impl.rs:21:20
   |
19 |     fn foo<'a>(x: &i32, y: &'a i32) -> &'a i32 {
   |                   ----                 -------
   |                   |
   |                   this parameter and the return type are declared with different lifetimes...
20 | 
21 |         if x > y { x } else { y } //~ ERROR lifetime mismatch
   |                    ^ ...but data from `x` is returned here

error: aborting due to previous error

